client-api: Add unstable support for extended profiles
According to MSC4133

--- a/crates/ruma-client-api/Cargo.toml
+++ b/crates/ruma-client-api/Cargo.toml
@@ -47,6 +47,7 @@ unstable-msc3843 = []
 unstable-msc3983 = []
 unstable-msc4108 = ["ruma-common/unstable-msc4108"]
 unstable-msc4121 = []
+unstable-msc4133 = []
 unstable-msc4140 = ["ruma-common/unstable-msc4140"]
 unstable-msc4143 = []
 unstable-msc4186 = ["ruma-common/unstable-msc4186"]
