--- a/crates/ruma/Cargo.toml
+++ b/crates/ruma/Cargo.toml
@@ -191,6 +191,7 @@ unstable-msc4095 = ["ruma-events?/unstable-msc4095"]
 unstable-msc4108 = ["ruma-common/unstable-msc4108", "ruma-client-api?/unstable-msc4108"]
 unstable-msc4121 = ["ruma-client-api?/unstable-msc4121"]
 unstable-msc4125 = ["ruma-federation-api?/unstable-msc4125"]
+unstable-msc4133 = ["ruma-client-api?/unstable-msc4133"]
 unstable-msc4140 = ["ruma-common/unstable-msc4140", "ruma-client-api?/unstable-msc4140"]
 unstable-msc4143 = ["ruma-client-api?/unstable-msc4143"]
 unstable-msc4171 = ["ruma-events?/unstable-msc4171"]
@@ -253,6 +254,7 @@ __unstable-mscs = [
     "unstable-msc4108",
     "unstable-msc4121",
     "unstable-msc4125",
+    "unstable-msc4133",
     "unstable-msc4140",
     "unstable-msc4143",
     "unstable-msc4171",
